move to jekyll only site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <header class="site-header">
 
 <div class="wrapper">
-  <div><a href="javascript:void(0)"><h1 class="logo">M</h1></a></div>
-  <div><a href="javascript:void(0)"><h1 class="footer-name">&copy Rod Machen 2015</h1></a></div>
+  <div><a href="/"><h1 class="logo">M</h1></a></div>
+  <div><a href="/"><h1 class="footer-name">&copy Rod Machen 2015</h1></a></div>
   <div class="nav-right">
     <div><a href="javascript:void(0)"><h1 class="footer-nav">Twitter</h1></a></div>
     <div><a href="javascript:void(0)"><h1 class="footer-nav">GitHub</h1></a></div>
