make entire card clickable

--- a/css/main.scss
+++ b/css/main.scss
@@ -124,6 +124,8 @@ body {
 	padding: 1em 2em 2em 2em;
 	margin: 2em;
 	// margin: 2em .5em;
+	cursor: pointer; 
+	cursor: hand;
 	}
 	ul {
 		margin: 0;
