move JS to index only

--- a/css/main.scss
+++ b/css/main.scss
@@ -45,6 +45,7 @@ body {
 }
 
 .site-header {
+	box-shadow: 0px 0px 10px #777;
 	background-color: $brand-color;
 	color: $background-color;
 	height: 92px;
