--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
   <div><a href="/"><h1 class="logo">M</h1></a></div>
   <div><a href="/"><h1 class="header-name">Rod Machen</h1></a></div>
   <div class="nav-right">
-    <div><a href="javascript:void(0)"><h1 class="header-nav">About</h1></a></div>
+    <!-- <div><a href="javascript:void(0)"><h1 class="header-nav">Projects</h1></a></div> -->
+    <!-- <div><a href="javascript:void(0)"><h1 class="header-nav">Categories</h1></a></div> -->
     <div><a href="javascript:void(0)"><h1 class="header-nav">Contact</h1></a></div>
-    <div><a href="javascript:void(0)"><h1 class="header-nav">Categories</h1></a></div>
-    <div><a href="javascript:void(0)"><h1 class="header-nav">Projects</h1></a></div>
+    <div><a href="javascript:void(0)"><h1 class="header-nav">About</h1></a></div>
   </div>
 </div>
 
