--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
   <div><a href="/"><h1 class="footer-name">&copy Rod Machen 2015</h1></a></div>
   <div class="nav-right">
     <!-- <div><a href="javascript:void(0)"><h1 class="footer-nav">Linkedin</h1></a></div> -->
-    <div><a href="javascript:void(0)"><h1 class="footer-nav">GitHub</h1></a></div>
-    <div><a href="javascript:void(0)"><h1 class="footer-nav">Twitter</h1></a></div>
+    <div><a href="https://github.com/rodmachen" target="blank"><h1 class="footer-nav">GitHub</h1></a></div>
+    <div><a href="https://twitter.com/rod_machen" target="blank"><h1 class="footer-nav">Twitter</h1></a></div>
   </div>
 </div>
 
