--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,9 +5,9 @@ layout: default
 
   <header class="post-header">
     <h1 >{{ page.title }}</h1>
-    <!-- <h1 class="post-title">{{ page.title }}</h1> -->
-  </header>
 
+  </header>
+   <hr class="division">
   <article class="post-content">
     {{ content }}
   </article>
