--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,15 @@ layout: default
 
   <header class="post-header">
     <h1 >{{ page.title }}</h1>
-   
+   <hr class="division">
   </header>
 
   <article class="post-content">
     {{ content }}
   </article>
+   <hr class="division">
+	
+
 	 <div class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
 	 </div>
 
