--- a/css/main.scss
+++ b/css/main.scss
@@ -108,6 +108,8 @@ body {
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	margin: 0 0 .25em 0;
 	padding: .25em 0 0 0;
+	text-shadow: 0px 2px 1px #111;
+	// text-shadow: 1px 1px 1px #777;
 }
 
 .post-link {
