--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@ body {
 	ul {
 		list-style-type: none;
 	}
+
 }
 
 .wrapper {
@@ -67,6 +68,7 @@ body {
 }
 
 .header-name {
+	// text-shadow: 0px 1px 1px #cccccc;
 	float: left;
 	line-height: 1.75em;
 	font-weight: bold;
@@ -76,6 +78,10 @@ body {
     &:hover {
       color: white;
     }
+	@media (max-width: 720px) {
+		float: right;
+		margin-right: .55em;
+	}
 }
 
 .header-nav {
@@ -94,6 +100,10 @@ body {
 	float: right;
 	width: 400px;
 	padding-right: .75em;
+	@media (max-width: 720px) {
+		// visibility: hidden;
+		display: none;
+	}
 }
 
 .home, .post {
@@ -101,6 +111,9 @@ body {
 }
 .division {
 	margin: 1em 0;
+	@media (max-width: 720px) {
+		margin: .75em 0em;
+	}
 }
 .page-heading {
 	font-size: 6em;
@@ -109,7 +122,6 @@ body {
 	margin: 0 0 .25em 0;
 	padding: .25em 0 0 0;
 	text-shadow: 0px 1px 1px #999;
-	// text-shadow: 1px 1px 1px #777;
 }
 
 .post-link {
@@ -117,12 +129,18 @@ body {
 	display: block;
 	text-align: center;
 	margin: 0;
+	@media (max-width: 720px) {
+		font-size: 1.5em;
+	}
 }
 
 .post-list {
 	p {
 		font-size: 1.5em;
 		margin-bottom: 0;
+		@media (max-width: 720px) {
+			margin-top: 0em;
+		}
 	}
 	li {
 	padding: 1em 2em 2em 2em;
@@ -130,6 +148,10 @@ body {
 	// margin: 2em .5em;
 	cursor: pointer; 
 	cursor: hand;
+		@media (max-width: 720px) {
+			margin: 1em .25em;
+			padding: .25em 1em 1em 1em;
+		}
 	}
 	ul {
 		margin: 0;
@@ -154,6 +176,13 @@ ul.post-list {
 	h1 {
 		margin: 0;
 	}
+		@media (max-width: 720px) {
+			margin: 1em;
+			padding: 1em;
+			h1 {
+				font-size: 1.5em;
+			}
+		}
 }
 
 .post-header {
@@ -162,15 +191,18 @@ ul.post-list {
 }
 
 .page-content {
-	height: 100%;
+	// height: 100%;
 	// min-height: calc(100% - 72px);
-	min-width: 100%;
+	// min-width: 100%;
 	// width: 70%;
 	float: left;
 	margin: 0;
 	h2 {
 		font-weight: normal;
 		padding: .01em 0;
+	}
+	@media (max-width: 720px) {
+		font-size: .85em;
 	}
 }
 
@@ -201,6 +233,11 @@ h1 {
     &:hover {
       color: white;
     }
+	@media (max-width: 720px) {
+		font-size: 1.1em;
+		float: right;
+		margin-right: 1em;
+	}
 }
 
 .footer-nav {
