--- a/css/main.scss
+++ b/css/main.scss
@@ -193,7 +193,7 @@ ul.post-list {
 .page-content {
 	// height: 100%;
 	// min-height: calc(100% - 72px);
-	// min-width: 100%;
+	min-width: 100%;
 	// width: 70%;
 	float: left;
 	margin: 0;
