--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,11 @@
 
   {% include footer.html %}
   
-  {% include shared/scripts.html %}
-
+  <!-- {% include shared/scripts.html %} -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="/scripts/jquery.fittext.js"></script>
+  <script>jQuery("#responsive_headline1").fitText(.85);</script>
+  <!-- <script src="/scripts/app.js"></script> -->
   </body>
 
 </html>
