--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -15,7 +15,11 @@
   </div>
 
   {% include footer.html %}
-  
+  <!-- {% include shared/scripts.html %} -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="/scripts/jquery.fittext.js"></script>
+  <script>jQuery("#responsive_headline1").fitText(.85);</script>
+
   </body>
 
 </html>
