--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 
 </div>
   <div class="footer-mobile">
-    <h1 class="footer-nav hidden-large">&copy 2015</h1>
+    <h1 class="footer-nav hidden-large">&copy Rod Machen 2015</h1>
 		<a href="/about" class="hidden-large"><h1 class="footer-nav">About</h1></a>
 		<a href="/contact" class="hidden-large"><h1 class="footer-nav">Contact</h1></a>
   </div>
