change page heading color

--- a/css/main.scss
+++ b/css/main.scss
@@ -108,6 +108,7 @@ body {
 	}
 }
 .page-heading {
+	color: $brand-color;
 	font-size: 6em;
 	text-align: center;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
